--- a/.github/workflows/fb_agent.yml
+++ b/.github/workflows/fb_agent.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   agent-fb-posting:
     name: 'Agent Facebook Posting'
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: 'checkout github repository'
@@ -23,12 +23,17 @@ jobs:
       - name: 'install library'
         run: |
         python -m pip install --upgrade pip
-        if [-f requirements.txt]; 
-        then pip install -r requirements.txt;
+        if [ -f requirements.txt ]; then 
+          pip install -r requirements.txt;
         fi
       
       - name: 'run python'
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        PAGE_ID: ${{ secrets.PAGE_ID }}
+        env:
+          FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
+          BLOCKED_DOMAINS: ${{ secrets.BLOCKED_DOMAINS }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERIFY_TOKEN: ${{ secrets.VERIFY_TOKEN }}
+          PAGE_ID: ${{ secrets.PAGE_ID }}
+          MODEL: ${{ secrets.MODEL }}
         run: python fb_post.py
 
