--- a/.github/workflows/fb_agent.yml
+++ b/.github/workflows/fb_agent.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
           BLOCKED_DOMAINS: ${{ secrets.BLOCKED_DOMAINS }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
           VERIFY_TOKEN: ${{ secrets.VERIFY_TOKEN }}
           PAGE_ID: ${{ secrets.PAGE_ID }}
           MODEL: ${{ secrets.MODEL }}
