--- a/.github/workflows/fb_agent.yml
+++ b/.github/workflows/fb_agent.yml
@@ -3,8 +3,9 @@ name: Facebook Agent
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0,22 8 * * *'     # 08:00 & 08:15 sáng (giờ VN)
-    # - cron: '0 13 * * *'    # 20:00 tối (giờ VN)
+    - cron: '0 1 * * *'
+    - cron: '30 1 * * *'
+    - cron: '0 13 * * *'
   
 jobs:
   agent-fb-posting:
